fix footer and spacing of hr which was being affected by height of skill2 img

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,8 @@ p {
 }
 
 hr {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 150px;
+  margin-bottom: 150px;
   border-style: none;
   border-top: 10px dotted #3282b8;
   width: 5%;
@@ -148,7 +148,7 @@ hr {
 .bottom-container {
   padding: 50px 0 20px;
   line-height: 2;
-  background-color: #bbe1fa;
+  background-color: #3282b8;
 }
 
 .copyright {
